add delete function

--- a/src/assets/styles/eventBox.scss
+++ b/src/assets/styles/eventBox.scss
@@ -1,19 +1,28 @@
 .container {
   display: flex;
-  align-items: center;
-  justify-content: center;
   flex-direction: column;
-  margin: 0;
+  overflow-x: hidden;
 }
+
 .card {
   background-color: #fff;
   border-radius: 10px;
   box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
   display: flex;
-  max-width: 100%;
   margin: 20px;
   overflow: hidden;
   width: 400px;
+}
+
+.card button {
+  position: relative;
+  float: right;
+  margin-right: 10px;
+  color: #520658;
+  border: none;
+
+  cursor: pointer;
+  outline: none;
 }
 
 .card h6 {
