--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,7 @@
+  *{padding: 0;
+  margin: 0;}
 body {
+ 
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
