--- a/src/assets/styles/eventBox.scss
+++ b/src/assets/styles/eventBox.scss
@@ -14,10 +14,11 @@
   width: 400px;
 }
 
-.card button {
+.delete-btn {
   position: relative;
   float: right;
   margin-right: 10px;
+  margin-top: 10px;
   color: #520658;
   border: none;
 
