--- a/src/assets/styles/home.scss
+++ b/src/assets/styles/home.scss
@@ -1,6 +1,5 @@
 .second-container {
-  display: inline-flex;
-  flex-direction: row;
-  overflow-x: hidden;
-  width: 100%;
+  display: flex;
+
+  flex-wrap: wrap;
 }
