--- a/src/assets/styles/header.scss
+++ b/src/assets/styles/header.scss
@@ -2,13 +2,16 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  background-color: whitesmoke;
-  border-bottom: 0.5px solid rgb(231, 231, 231);
+  background-color: #6155a6;
   padding: 1rem 0 1rem 0;
 }
 
+.dark--mode-header {
+  background-color: #2c003e;
+}
+
 .logo {
-  color: #333;
+  color: white;
   font-weight: bold;
 }
 .left-side {
@@ -18,41 +21,51 @@
   margin: auto 2em;
 }
 .switch {
+  display: flex;
+  height: 36px;
   position: relative;
-  display: inline-block;
-  width: 60px;
-  height: 34px;
+  width: 70px;
 }
 
 .switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
+  display: none;
 }
 
 .slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
+  background-color: #ffe6e6;
+  border: 1px solid #a685e2;
   bottom: 0;
-  background-color: #ccc;
-  -webkit-transition: 0.4s;
+  cursor: pointer;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
   transition: 0.4s;
+
+  &:before {
+    background-color: #6155a6;
+    border: 1px solid #a685e2;
+    bottom: 3px;
+    content: "";
+    height: 26px;
+    left: 4px;
+    position: absolute;
+    transition: 0.4s;
+    width: 26px;
+    z-index: 421;
+  }
 }
 
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 26px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
-  background-color: white;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
+input:checked + .slider {
+  background-color: #45046a;
 }
+
+input:checked + .slider:before {
+  transform: translateX(34px);
+  border-color: #cfcfcf;
+  background-color: #efefef;
+}
+
 .slider.round {
   border-radius: 34px;
 }
@@ -61,16 +74,11 @@
   border-radius: 50%;
 }
 
-input:checked + .slider {
-  background-color: #440a67;
-}
-
-input:focus + .slider {
-  box-shadow: 0 0 1px #440a67;
-}
-
-input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
+.toggle-moon,
+.toggle-sun {
+  width: 50%;
+  text-align: center;
+  padding: 0.25em;
+  position: relative;
+  z-index: 420;
 }
