--- a/src/assets/styles/eventBox.scss
+++ b/src/assets/styles/eventBox.scss
@@ -3,7 +3,13 @@
   flex-direction: column;
   overflow-x: hidden;
 }
-
+.card-dark-mode {
+  background-color: #2c003e !important;
+  color: whitesmoke;
+}
+.card-side-dark-mode {
+  background-color: #cc0e74 !important;
+}
 .card {
   background-color: #fff;
   border-radius: 10px;
@@ -19,7 +25,7 @@
   float: right;
   margin-right: 10px;
   margin-top: 10px;
-  color: #520658;
+  color: #6155a6;
   border: none;
 
   cursor: pointer;
@@ -27,7 +33,6 @@
 }
 
 .card h6 {
-  opacity: 0.6;
   margin: 0;
   letter-spacing: 1px;
   text-transform: uppercase;
@@ -39,7 +44,7 @@
 }
 
 .card-side {
-  background-color: #2a265f;
+  background-color: #fd3a69;
   color: #fff;
   padding: 10px;
   max-width: 150px;
