--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
   *{padding: 0;
   margin: 0;}
 body {
- 
+  background-color: #ffe6e6;
+  background-image: url("https://www.transparenttextures.com/patterns/cubes.png");
+  /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
