--- a/src/assets/styles/add.scss
+++ b/src/assets/styles/add.scss
@@ -44,7 +44,7 @@
   margin-top: 20px;
 }
 
-input {
+.add-input input {
   border-radius: 4px;
   padding: 12px 20px;
   border: 1.7px solid #6155a6;
